--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/dinner_plate"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/dinner_plate_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SitanDecider">
-        <activity android:name=".AddNewActivity"></activity>
+        <activity android:name=".Help_Activity"></activity>
+        <activity android:name=".AddNewActivity" />
         <activity
             android:name=".ui.login.AddNewActivity"
             android:label="@string/title_activity_add_new" />
